--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1358,6 +1358,13 @@ margin-left: 1px;
   font-size: 20px;
   color: white;
 }
+.inputtext{
+  width: auto; background-color: #373737; padding: 12px 40px; border: none; border-radius: 20px; color: white;  font-size: 15px;
+}
+.inputtext::placeholder{
+  font-size: 15px;
+  color: white;
+}
 .greyline{
   width: 100%; height: 1px; background-color: #FFFFFF47;
 }
