--- a/views/admin/quotePage.ejs
+++ b/views/admin/quotePage.ejs
@@ -69,35 +69,35 @@
         Start Today
         </p>
         <div class="row" style="display: flex; flex-wrap: wrap;">
-          <div class="" style="width: 45%;">
-            <img style="width: 100%;" src="/images/demo2.png" />
+          <div class="w45p" >
+            <img class="w100p" src="/images/demo2.png" />
           </div>
-          <div class="1" style="width: 45%;">
+          <div class="1 w45p" >
             <form action="/submit" method="POST">
              <div class="app-feature">
        
               <p>
-                <input type="text" id="fullName" class="inputtext" name="fullName" placeholder="Full Name"  required>
+                <input type="text" id="fullName" class="inputtext w100p" name="fullName" placeholder="Full Name"  required>
               </p>
             </div>
             <div class="app-feature">
            
               <p>
-                <input type="email" id="email" class="inputtext" name="email" placeholder="Email" required>
+                <input type="email" id="email" class="inputtext w100p" name="email" placeholder="Email" required>
 
               </p>
             </div>
             <div class="app-feature">
              
               <p>
-                <input type="tel" id="contactNumber" class="inputtext" placeholder="Contact Number" name="contactNumber">
+                <input type="tel" id="contactNumber" class="inputtext w100p" placeholder="Contact Number" name="contactNumber">
 
               </p>
             </div>
             <div class="app-feature">
      
                 <p>
-                    <textarea id="projectOverview" name="projectOverview" placeholder="Project Overview" class="inputtext" rows="4" required></textarea>
+                    <textarea id="projectOverview" name="projectOverview" placeholder="Project Overview" class="inputtext w100p" rows="4" style="resize: none;" required></textarea>
 
                 </p>
               </div>
