--- a/views/admin/caseStudyView.ejs
+++ b/views/admin/caseStudyView.ejs
@@ -38,7 +38,7 @@
             <li><a href="/admin/case-studies" class="nav-item nav-link bg-active ">Case Study</a></li>
             <li><a href="/admin/viewquote" class="nav-item nav-link ">Quotations</a></li>
             <li><a href="/admin/team" class="nav-item nav-link ">Team Members</a></li>
-
+            <li><a href="/admin/client-reviews" class="nav-item nav-link ">Client Reviews</a></li>
           </div>
         </nav>
       </div>
@@ -58,6 +58,7 @@
                 <li><a href="/admin/case-studies" class="nav-item nav-link">Case Study</a></li>
                 <li><a href="/admin/viewquote" class="nav-item nav-link ">Quotations</a></li>
                 <li><a href="/admin/team" class="nav-item nav-link ">Team Members</a></li>
+                <li><a href="/admin/client-reviews" class="nav-item nav-link ">Client Reviews</a></li>
               </div>
             </div>
           </div>
