--- a/views/admin/teamMembers.ejs
+++ b/views/admin/teamMembers.ejs
@@ -38,6 +38,7 @@
             <li><a href="/admin/case-studies" class="nav-item nav-link">Case Study</a></li>
             <li><a href="/admin/viewquote" class="nav-item nav-link ">Quotations</a></li>
             <li><a href="/admin/team" class="nav-item nav-link bg-active ">Team Members</a></li>
+            <li><a href="/admin/client-reviews" class="nav-item nav-link ">Client Reviews</a></li>
   
         </div>
         </nav>
@@ -58,6 +59,7 @@
                 <li><a href="/admin/case-studies" class="nav-item nav-link">Case Study</a></li>
                 <li><a href="/admin/viewquote" class="nav-item nav-link ">Quotations</a></li>
                 <li><a href="/admin/team" class="nav-item nav-link bg-active ">Team Members</a></li>
+                <li><a href="/admin/client-reviews" class="nav-item nav-link ">Client Reviews</a></li>
 
               </div>
             </div>
