--- a/views/admin/otpform.ejs
+++ b/views/admin/otpform.ejs
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>OTP Input</title>
- 
+    <!-- <link rel="stylesheet" href="/css/otpform.css" /> -->
 </head>
 
 <body>
     <form action="/sendOtp" method="post" > <!-- Set the action to call /sendOtp -->
-        <label for="email">Enter your email to receive OTP:</label>
+        <label for="email">Enter your email:</label>
         <input  type="text" id="email" name="email" required />
         <br><br>
         <button class="center-button" type="submit">Send OTP</button>
